chapters/03-networking/manifests/route-portal.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal
  namespace: myfinance-demo
  labels:
    app: financeflow
    tier: portal
  annotations:
    haproxy.router.openshift.io/timeout: 30s
spec:
  to:
    kind: Service
    name: portal
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
