chapters/03-networking/manifests/networkpolicy-allow-account-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-account-service
  namespace: myfinance-demo
  labels:
    app: financeflow
spec:
  podSelector:
    matchLabels:
      tier: account-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: portal
        - podSelector:
            matchLabels:
              tier: transaction-service   # transaction-service calls account-service for balance checks
      ports:
        - protocol: TCP
          port: 8080
