chapters/03-networking/manifests/networkpolicy-allow-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-postgres
  namespace: myfinance-demo
  labels:
    app: financeflow
spec:
  podSelector:
    matchLabels:
      tier: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: account-service
        - podSelector:
            matchLabels:
              tier: transaction-service
      ports:
        - protocol: TCP
          port: 5432
