chapters/03-networking/manifests/networkpolicy-allow-transaction-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-transaction-service
  namespace: myfinance-demo
  labels:
    app: financeflow
spec:
  podSelector:
    matchLabels:
      tier: transaction-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: portal
      ports:
        - protocol: TCP
          port: 8080
